charts/sample-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-demo
spec:
  selector:
    app: sample-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
